# blindtactics

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  deploy.yml
crates/blindfold-core/: Cargo.toml
crates/blindfold-core/examples/: frontier_memory.rs
crates/blindfold-core/src/: arrow.rs  constants.rs  diction.rs  lib.rs  lichess.rs  mate.rs  position.rs  puzzle.rs  roster.rs
crates/blindfold-core/tests/: arrow.rs  diction.rs  lichess.rs  mate.rs  mate_edge_cases.rs  position.rs  puzzle.rs  roster.rs
crates/blindfold-core/tests/common/: mod.rs
crates/blindfold-curate/: Cargo.toml
crates/blindfold-curate/src/: constants.rs  dump.rs  gather.rs  lib.rs  main.rs  select.rs
crates/blindfold-curate/tests/: database.rs  gather.rs  select.rs
crates/blindfold-web/: Cargo.toml  Trunk.toml  fetch-vosk.sh  index.html  package-lock.json  package.json  playwright.config.js  styles.css
crates/blindfold-web/assets/pieces/: README.md
crates/blindfold-web/e2e/: README.md  helpers.js  mobile.spec.js  reveal.spec.js  serve.mjs  voice.spec.js
crates/blindfold-web/src/: app.rs  board.rs  chime.rs  constants.rs  database.rs  lib.rs  line.rs  main.rs  panel.rs  pieces.rs  rating.rs  recognition.rs  session.rs  settings.rs  speech.rs  square.rs  storage.rs
crates/blindfold-web/tests/: database.rs  rating.rs  session.rs  settings.rs  speech.rs  square.rs
database/: mate_in_1.jsonl  mate_in_2.jsonl  mate_in_3.jsonl  mate_in_4.jsonl
