[workspace]
resolver = "2"
members = [
    "crates/blindfold-core",
]

[workspace.package]
edition = "2021"
# GPL-3.0-or-later is forced by shakmaty, which is GPL-3.0-or-later. Shipping a
# .wasm bundle to a browser counts as distribution (GPL has no network loophole),
# so the whole trainer inherits it. Accepted deliberately; see CLAUDE.md.
license = "GPL-3.0-or-later"
rust-version = "1.97"
version = "0.0.1"
authors = ["Blindfold Chess Trainer contributors"]

[workspace.dependencies]
# `magics` (694 KiB of precomputed attack tables, on by default upstream) is
# switched off here and re-enabled only by the native curation tool via
# `blindfold-core`'s `magics` feature. The browser does no deep search, so the
# tables would be dead weight in the wasm bundle.
shakmaty = { version = "0.30", default-features = false, features = ["std"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[profile.dev]
opt-level = 0
debug = true

# Dependencies at full optimization: shakmaty's movegen is the inner loop of the
# mate search, and an unoptimized one makes `cargo test` unpleasant.
[profile.dev.package."*"]
opt-level = 3

# And the crates that actually run that search. This line is not redundant:
# cargo's `"*"` above matches DEPENDENCIES ONLY, never workspace members, so
# without it `mate::search` itself stays at opt-level 0 — measured 3.5x slower on
# every dev test run. There is no glob that covers members; each must be listed.
[profile.dev.package.blindfold-core]
opt-level = 3

[profile.release]
opt-level = 3
debug = "line-tables-only"
lto = "thin"
codegen-units = 1
